[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
itertools = "0.10.5"
pathfinding = "4.0.1"

[dev-dependencies]
criterion = "0.4.0"
test-case = "2.2.2"


[[bench]]
name = "benchmarks"
harness = false
